[project]
name = "skinsight-core"
version = "0.1.0"
description = ""
authors = [
    {name = "Rulerwxe",email = "rulerwxe@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "orjson (>=3.11.7,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "polars (>=1.38.1,<2.0.0)",
    "arq (>=0.27.0,<0.28.0)",
    "redis (<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "aiolimiter (>=1.2.1,<2.0.0)",
    "prometheus-client (>=0.24.1,<0.25.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
